Ajustes realizados para permitir execução o projeto no servidor WildFly.

--- a/pom.xml
+++ b/pom.xml
@@ -62,11 +62,13 @@
         <dependency>
             <groupId>com.sun.faces</groupId>
             <artifactId>jsf-impl</artifactId>
+            <scope>provided</scope>
         </dependency>
         <!-- Faces Library -->
         <dependency>
             <groupId>com.sun.faces</groupId>
             <artifactId>jsf-api</artifactId>
+            <scope>provided</scope>
         </dependency>
         <!-- Primefaces Version 5 -->
         <dependency>
